@@ -1,7 +1,7 @@
-   ======================================================================
-   == NOTICE file corresponding to section 4 d of the Apache License,  ==
-   == Version 2.0, in this case for the Spring Framework distribution. ==
-   ======================================================================
+   ==================================================================================
+   == NOTICE file corresponding to section 4 d of the Apache License, Version 2.0, == 
+   == in this case for the Spring Dynamic Modules / Spring OSGi distribution.      ==
+   ==================================================================================
 
    This product includes software developed by
    the Apache Software Foundation (http://www.apache.org).
@@ -18,4 +18,4 @@
    The names "Spring" and "Spring Framework" must not be used to
    endorse or promote products derived from this software without
    prior written permission. For written permission, please contact
-   rod.johnson@interface21.com or juergen.hoeller@interface21.com.
+   rod.johnson@SpringSource.com or juergen.hoeller@SpringSource.com.
