@@ -3,11 +3,36 @@ Spring Dynamic Modules Samples
 
 This folder contains various samples and demos for Spring-DM.
 
-Please see each demo folder for instructions on what the demo contains.
+Please see each demo folder for instructions (readme.txt) on what the demo contains.
 
 As a general rule, each demo provides an integration tests that bootstraps
 the OSGi platform, installs the demo and its dependencies and interacts with 
 the demo application.
 
+BUILDING AND DEPLOYMENT
+-----------------------
+
+All demos require Maven 2.0.7+ and JDK 1.4+.
+
+Each module should be run from its top folder using maven:
+
+# mvn clean install
+
+Notice that all modules part of the demo must be installed locally as
+the integration tests rely on the local maven repository (at the moment)
+for installing the demo dependencies.
+This requirement might be discarded in the future.
+
 The demos themselves can be deployed individually to an OSGi platform
 either by hand or through an automatic tools such as Pax Construct/Runner.
+
+MISSING DEPENDENCIES
+--------------------
+
+There have been reports of Maven not properly downloading a module dependency.
+If you do experience missing artifacts, not available in the public repository,
+please run maven from the project root while connected to the internet.
+If that fails, check your local repository and see whether you have a faulty
+dependency retrieved (normally an empty/invalid/incomplete folder).
+
+If everything else fails, please use Spring-DM mailing list/forum.
