@@ -14,6 +14,7 @@
   
   <properties>
      <spring.osgi.private.pkg></spring.osgi.private.pkg>
+     <spring.osgi.license.loc>../../..</spring.osgi.license.loc>
   </properties>
   <modules>
     <module>weather-dao</module>
