@@ -26,17 +26,18 @@
     org.springframework.jmx.export
    </spring.osgi.import.pkg>
    
+   <!-- used inside the filtered osgi manifest -->
+   <bundle.version>1.0.0.rc1</bundle.version>
+   
   </properties>
   
   <build>
-  
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		
+  	<resources>
+		<resource>
+			<directory>src/main/resources</directory>
+			<filtering>true</filtering>
+		</resource>
+	 </resources>
 	<plugins>
 	<plugin>
         <groupId>org.apache.maven.plugins</groupId>
